src/styles/components/loading.scss
/**
 * Component: Loading
 * ------------------------------------------------------------------------------
 * Loading screen animation.
 *
 */
.loading {
  align-items: center;
  animation: intro var(--timing-l) var(--easing);
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: calc(100vh - var(--header) - var(--gutter-l) - var(--gutter-l));
  padding: var(--gutter-m) 0;
  position: relative;

  &__container {
    max-width: 350px;
    width: 70%;
  }

  &__robot {
    height: 0;
    padding-bottom: percentage(575 / 422);
    position: relative;
    width: 100%;

    .robot {
      height: 100%;
      left: 0;
      object-fit: contain;
      position: absolute;
      top: 0;
      width: 100%;
    }
  }

  &__animation {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 1fr);
    grid-gap: var(--gutter-2xs);
    height: 20vw;
    left: 50%;
    max-height: 80px;
    max-width: 80px;
    position: absolute;
    top: 50%;
    transform: translate(-52%, -32%);
    width: 20vw;
    z-index: 2;
  }

  &__square {
    animation: loading 1.8s infinite ease-in-out;
    background-color: var(--colour-green);

    &#{&}--7 {
      animation-delay: 0s;
    }

    &#{&}--4,
    &#{&}--8 {
      animation-delay: 0.15s;
    }

    &#{&}--1,
    &#{&}--5,
    &#{&}--9 {
      animation-delay: 0.3s;
    }

    &#{&}--2,
    &#{&}--6  {
      animation-delay: 0.45s;
    }

    &#{&}--3 {
      animation-delay: 0.6s;
    }
  }

  &__text {
    margin-top: var(--gutter-m);
  }
}

.robot {
  &__eyes {
    animation: eyes 3s linear normal infinite;
  }

  &__blink {
    animation: blink 3s linear normal infinite;
  }
}

@keyframes eyes {
  0%,
  50% {
    opacity: 1;
  }

  52%,
  56% {
    opacity: 0;
  }

  60%,
  100% {
    opacity: 1;
  }
}

@keyframes blink {
  0%,
  50% {
    opacity: 0;
  }

  52%,
  56% {
    opacity: 1;
  }

  60%,
  100% {
    opacity: 0;
  }
}

